// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picker Cascader Picker 1`] = `
<Picker
  cancelText="取消"
  dataSource={
    Array [
      Object {
        "children": Array [
          Object {
            "label": "选项一",
            "value": "11",
          },
          Object {
            "label": "选项二",
            "value": "12",
          },
        ],
        "label": "选项一",
        "value": "1",
      },
      Object {
        "children": Array [
          Object {
            "label": "选项一",
            "value": "21",
          },
          Object {
            "label": "选项二",
            "value": "22",
          },
        ],
        "label": "选项一",
        "value": "2",
      },
    ]
  }
  disabled={false}
  displayAddon=""
  displayMember="label"
  okText="确定"
  onCancel={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onMaskClick={[Function]}
  onOk={[Function]}
  placeholder="请选择"
  prefixCls="za-picker"
  title="请选择"
  valueMember="value"
  visible={false}
>
  <div
    className="za-picker"
    onClick={[Function]}
  >
    <div
      className="za-picker-input za-picker-placeholder"
    >
      <input
        type="hidden"
        value={Array []}
      />
      请选择
    </div>
    <div
      className="za-picker-container"
      onClick={[Function]}
    >
      <Popup
        animationDuration={200}
        autoClose={false}
        className="za-popup-inner"
        direction="bottom"
        duration={3000}
        mask={true}
        maskType="normal"
        onClose={[Function]}
        onMaskClick={[Function]}
        prefixCls="za-popup"
        visible={false}
      >
        <div
          className="za-popup za-popup-hidden za-popup-inner"
        >
          <div
            className="za-popup-wrapper za-popup-wrapper-bottom"
            style={
              Object {
                "WebkitTransitionDuration": "200ms",
                "transitionDuration": "200ms",
              }
            }
          >
            <div
              className="za-picker-wrapper"
            >
              <div
                className="za-picker-header"
              >
                <div
                  className="za-picker-cancel"
                  onClick={[Function]}
                >
                  取消
                </div>
                <div
                  className="za-picker-title"
                >
                  请选择
                </div>
                <div
                  className="za-picker-submit"
                  onClick={[Function]}
                >
                  确定
                </div>
              </div>
              <div
                className="za-picker-mask-top"
              >
                <div
                  className="za-picker-mask-bottom"
                >
                  <Cascader
                    data={
                      Array [
                        Object {
                          "children": Array [
                            Object {
                              "label": "选项一",
                              "value": "11",
                            },
                            Object {
                              "label": "选项二",
                              "value": "12",
                            },
                          ],
                          "label": "选项一",
                          "value": "1",
                        },
                        Object {
                          "children": Array [
                            Object {
                              "label": "选项一",
                              "value": "21",
                            },
                            Object {
                              "label": "选项二",
                              "value": "22",
                            },
                          ],
                          "label": "选项一",
                          "value": "2",
                        },
                      ]
                    }
                    disabled={false}
                    displayMember="label"
                    onChange={[Function]}
                    prefixCls="za-picker"
                    value={Array []}
                    valueMember="value"
                  >
                    <ColumnGroup
                      displayMember="label"
                      onValueChange={[Function]}
                      prefixCls="za-picker"
                      selectedValue={
                        Array [
                          "1",
                          "11",
                        ]
                      }
                      valueMember="value"
                    >
                      <div
                        className="za-picker-column-group"
                      >
                        <div
                          className="za-picker-column-group-item"
                        >
                          <Column
                            displayMember="label"
                            onValueChange={[Function]}
                            prefixCls="za-picker"
                            pure={true}
                            selectedValue="1"
                            valueMember="value"
                          >
                            <div
                              className="za-picker-column"
                            >
                              <div
                                className="za-picker-column-indicator"
                              />
                              <div
                                className="za-picker-column-content"
                              >
                                <div
                                  className="za-picker-column-item za-picker-column-item-selected"
                                >
                                  选项一
                                </div>
                                <div
                                  className="za-picker-column-item"
                                >
                                  选项一
                                </div>
                              </div>
                            </div>
                          </Column>
                        </div>
                        <div
                          className="za-picker-column-group-item"
                        >
                          <Column
                            displayMember="label"
                            onValueChange={[Function]}
                            prefixCls="za-picker"
                            pure={true}
                            selectedValue="11"
                            valueMember="value"
                          >
                            <div
                              className="za-picker-column"
                            >
                              <div
                                className="za-picker-column-indicator"
                              />
                              <div
                                className="za-picker-column-content"
                              >
                                <div
                                  className="za-picker-column-item za-picker-column-item-selected"
                                >
                                  选项一
                                </div>
                                <div
                                  className="za-picker-column-item"
                                >
                                  选项二
                                </div>
                              </div>
                            </div>
                          </Column>
                        </div>
                      </div>
                    </ColumnGroup>
                  </Cascader>
                </div>
              </div>
            </div>
          </div>
          <Mask
            className=""
            onClose={[Function]}
            prefixCls="za-mask"
            style={
              Object {
                "WebkitAnimationDuration": "200ms",
                "animationDuration": "200ms",
              }
            }
            type="normal"
            visible={false}
          />
        </div>
      </Popup>
    </div>
  </div>
</Picker>
`;

exports[`Picker Picker 1`] = `
<div
  class="za-picker"
>
  <div
    class="za-picker-input za-picker-placeholder"
  >
    <input
      type="hidden"
      value=""
    />
    请选择
  </div>
  <div
    class="za-picker-container"
  >
    <div
      class="za-popup za-popup-hidden za-popup-inner"
    >
      <div
        class="za-popup-wrapper za-popup-wrapper-bottom"
        style="-webkit-transition-duration:200ms;transition-duration:200ms;"
      >
        <div
          class="za-picker-wrapper"
        >
          <div
            class="za-picker-header"
          >
            <div
              class="za-picker-cancel"
            >
              取消
            </div>
            <div
              class="za-picker-title"
            >
              请选择
            </div>
            <div
              class="za-picker-submit"
            >
              确定
            </div>
          </div>
          <div
            class="za-picker-mask-top"
          >
            <div
              class="za-picker-mask-bottom"
            >
              <div
                class="za-picker-column-group"
              >
                <div
                  class="za-picker-column-group-item"
                >
                  <div
                    class="za-picker-column"
                  >
                    <div
                      class="za-picker-column-indicator"
                    />
                    <div
                      class="za-picker-column-content"
                    >
                      <div
                        class="za-picker-column-item za-picker-column-item-selected"
                      >
                        选项一
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        选项二
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Picker StackPicker 1`] = `
<PickerStack
  cols={Infinity}
  dataSource={
    Array [
      Object {
        "children": Array [
          Object {
            "label": "海淀区",
            "value": "11",
          },
          Object {
            "label": "西城区",
            "value": "12",
          },
        ],
        "label": "北京市",
        "value": "1",
      },
      Object {
        "children": Array [
          Object {
            "label": "黄埔区",
            "value": "21",
          },
          Object {
            "label": "虹口区",
            "value": "22",
          },
        ],
        "label": "上海市",
        "value": "2",
      },
    ]
  }
  disabled={false}
  displayItems={8}
  displayRender={[Function]}
  itemHeight={50}
  itemRender={[Function]}
  labelAddon=" > "
  onCancel={[Function]}
  onOk={[Function]}
  placeholder="请选择"
  prefixCls="za-picker"
  title="请选择"
  validate={[Function]}
  value={Array []}
  valueMember="value"
>
  <div
    className="za-picker"
  >
    <div
      className="za-picker-input za-picker-placeholder"
      onClick={[Function]}
    >
      <input
        type="hidden"
        value={Array []}
      />
      请选择
    </div>
    <div
      className="za-picker-container za-picker-hidden"
      onClick={[Function]}
    >
      <Popup
        animationDuration={200}
        autoClose={false}
        className={null}
        direction="bottom"
        duration={3000}
        mask={true}
        maskType="normal"
        onClose={[Function]}
        onMaskClick={[Function]}
        prefixCls="za-popup"
        visible={false}
      >
        <div
          className="za-popup za-popup-hidden"
        >
          <div
            className="za-popup-wrapper za-popup-wrapper-bottom"
            style={
              Object {
                "WebkitTransitionDuration": "200ms",
                "transitionDuration": "200ms",
              }
            }
          >
            <div
              className="za-picker-wrapper"
            >
              <div
                className="za-picker-header"
              >
                <div
                  className="za-picker-cancel"
                  onClick={[Function]}
                >
                  取消
                </div>
                <div
                  className="za-picker-title"
                >
                  请选择
                </div>
                <div
                  className="za-picker-submit"
                />
              </div>
              <div
                className="za-picker-crumbs"
              >
                <p>
                  选择：
                </p>
              </div>
              <div
                className="za-picker-stack-group"
              >
                <div
                  className="za-picker-stack-column lower-hidden"
                  onClick={[Function]}
                >
                  <div
                    className="za-picker-stack-column-wrapper"
                    onClick={[Function]}
                  >
                    <div
                      className="za-picker-stack-item"
                      onClick={[Function]}
                    >
                      北京市
                    </div>
                    <div
                      className="za-picker-stack-item"
                      onClick={[Function]}
                    >
                      上海市
                    </div>
                  </div>
                </div>
                <div
                  className="za-picker-stack-column lower-hidden"
                  onClick={[Function]}
                >
                  <div
                    className="za-picker-stack-column-wrapper"
                    onClick={[Function]}
                  >
                    <div
                      className="za-picker-stack-item"
                      onClick={[Function]}
                    >
                      海淀区
                    </div>
                    <div
                      className="za-picker-stack-item"
                      onClick={[Function]}
                    >
                      西城区
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <Mask
            className=""
            onClose={[Function]}
            prefixCls="za-mask"
            style={
              Object {
                "WebkitAnimationDuration": "200ms",
                "animationDuration": "200ms",
              }
            }
            type="normal"
            visible={false}
          />
        </div>
      </Popup>
    </div>
  </div>
</PickerStack>
`;
